--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Darren Merrett <darren.merrett@gmail.com>",
   "main": "react-spark.js",
   "dependencies": {
+    "gulp": "^3.9.1",
     "js-cookie": "^2.1.0",
     "laravel-elixir": "^5.0.0",
     "moment": "^2.10.6",
@@ -12,5 +13,20 @@
     "react-dm-bootstrap": "^0.1.1",
     "react-dom": "^15.1.0",
     "sweetalert": "^1.1.3"
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.1",
+    "del": "^2.2.1",
+    "factor-bundle": "^2.5.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-browserify": "^0.5.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-requirejs": "^0.1.3",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.3",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   }
 }
