--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-spark-js",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "React components for Spark",
   "author": "Darren Merrett <darren.merrett@gmail.com>",
   "main": "react-spark.js",
@@ -24,6 +24,8 @@
     "react": "^15.1.0",
     "react-dm-bootstrap": "^0.1.1",
     "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
     "sweetalert": "^1.1.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
