--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-uglify": "^1.5.3",
     "js-cookie": "^2.1.0",
     "laravel-elixir": "^5.0.0",
+    "laravel-elixir-browserify-official": "^0.1.3",
     "moment": "^2.10.6",
     "react": "^15.1.0",
     "react-dm-bootstrap": "^0.1.1",
